@@ -1,0 +1,48 @@
+[Desktop Entry]
+Version=1.0
+Terminal=false
+TryExec=ooffice
+Exec=openoffice.org3 %U
+Icon=startcenter
+Type=Application
+Categories=Office;X-SuSE-Core-Office;
+StartupNotify=false
+InitialPreference=5
+Name=OpenOffice.org 3.1
+Name[af]=OpenOffice.org 3.1
+Name[ar]=أوبن أفيس.أورج
+Name[be@latin]=OpenOffice.org 3.1
+Name[ca]=OpenOffice.org 3.1
+Name[cs]=OpenOffice.org 3.1
+Name[da]=OpenOffice.org 3.1
+Name[de]=OpenOffice.org 3.1
+Name[dz]=ཨོ་པཱན་ཨོ་ཕིསི.ཨོ་ཨར་ཇི།
+Name[el]=OpenOffice.org 3.1
+Name[en_CA]=OpenOffice.org 3.1
+Name[en_GB]=OpenOffice.org 3.1
+Name[es]=OpenOffice.org 3.1
+Name[et]=OpenOffice.org 3.1
+Name[eu]=OpenOffice.org 3.1
+Name[fi]=OpenOffice.org 3.1
+Name[fr]=OpenOffice.org 3.1
+Name[gl]=OpenOffice.org 3.1
+Name[he]=OpenOffice.org 3.1
+Name[hu]=OpenOffice.org 3.1
+Name[it]=OpenOffice.org 3.1
+Name[ko]=OpenOffice.org 3.1
+Name[lt]=OpenOffice.org 3.1
+Name[nb]=OpenOffice.org 3.1
+Name[ne]=ओपनअफिस डट अर्ग
+Name[nl]=OpenOffice.org 3.1
+Name[oc]=OpenOffice.org 3.1
+Name[pl]=OpenOffice.org 3.1
+Name[ps]=اوپنافس.ورګ
+Name[pt]=OpenOffice.org 3.1
+Name[pt_BR]=OpenOffice.org 3.1
+Name[sl]=OpenOffice.org 3.1
+Name[sr]=OpenOffice.org 3.1
+Name[sr@latin]=OpenOffice.org 3.1
+Name[sv]=OpenOffice.org 3.1
+Name[vi]=OpenOffice.org 3.1
+Name[zh_CN]=OpenOffice.org 3.1
+GenericName=Office
