@@ -1,50 +1,0 @@
-[Desktop Entry]
-Version=0.92
-Encoding=UTF-8
-MultipleArgs=false
-Terminal=0
-Icon=extension.png
-Exec=/opt/openoffice/program/soffice slot:5500
-Categories=Application;Office;X-Red-Hat-Base;X-SuSE-Core-Office;
-Type=Application
-Name=OpenOffice.org beta From Template
-Name[en]=OpenOffice.org beta From Template
-Name[de]=OpenOffice.org beta Aus Vorlage
-Name[pt]=OpenOffice.org beta Aus Vorlage
-Name[ru]=OpenOffice.org beta из шаблона...
-Name[el]=OpenOffice.org beta Από πρότυπο
-Name[nl]=OpenOffice.org beta Uit sjabloon
-Name[fr]=À partir d'un modèle OpenOffice.org beta
-Name[es]=A partir de una plantilla de OpenOffice.org beta
-Name[fi]=OpenOffice.org beta Aus Vorlage
-Name[hu]=OpenOffice.org beta sablonból
-Name[it]=OpenOffice.org beta Da modello
-Name[cs]=Ze šablony OpenOffice.org beta
-Name[sk]=Zo šablóny OpenOffice.org beta
-Name[da]=OpenOffice.org beta Fra skabelon
-Name[sv]=Från en OpenOffice.org beta-mall
-Name[pl]=OpenOffice.org beta Na podstawie szablonu
-Name[pt_BR]=A partir de um modelo OpenOffice.org beta
-Name[ja]=OpenOffice.org beta テンプレートから
-Name[ko]=OpenOffice.org beta 서식 파일로부터
-Name[zh_CN]=OpenOffice.org beta 采用样式
-Name[zh_TW]=OpenOffice.org beta 採用樣式
-Name[tr]=OpenOffice.org beta Şablondan
-Name[ar]=OpenOffice.org beta Aus Vorlage
-Name[he]=OpenOffice.org beta Aus Vorlage
-Name[ca]=OpenOffice.org beta Aus Vorlage
-Name[th]=OpenOffice.org beta จากแม่แบบ
-Name[hi_IN]=OpenOffice.org beta Aus Vorlage
-Name[et]=OpenOffice.org beta mallist
-Name[sl]=OpenOffice.org beta iz predloge
-Name[ns]=OpenOffice.org beta go tšwa go Template
-Name[af]=OpenOffice.org beta vanaf sjabloon
-Name[zu]=I-OpenOffice.org beta esuka Oqwenjini lokuphumelelisa
-Name[nb]=OpenOffice.org beta From Template
-Name[cy]=OpenOffice.org beta From Template
-Name[tn]=OpenOffice.org beta From Template
-Name[nn]=OpenOffice.org beta From Template
-Name[eu]=OpenOffice.org beta Aus Vorlage
-Name[lt]=„OpenOffice.org beta“ dokumentas iš šablono
-Name[kn_IN]=OpenOffice.org beta ಸಿದ್ಧವಿನ್ಯಾಸ ಪುಟದಿಂದ
-Name[gl]=A partir dun modelo de OpenOffice.org beta
